# substreams-sink-prometheus.rs

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain.toml  substreams.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
proto/substreams/sink/prometheus/v1/: prometheus.proto
src/: counter.rs  gauge.rs  helpers.rs  histogram.rs  labels.rs  lib.rs  summary.rs
src/pb/: pinax.substreams.sink.prometheus.v1.rs
